--- a/conf/uppmax-modules.config
+++ b/conf/uppmax-modules.config
@@ -21,14 +21,32 @@ process {
   $makeHISATindex.module = ['bioinfo-tools', 'HISAT2/2.1.0']
   $fastqc.module = ['bioinfo-tools', 'FastQC/0.11.5']
   $trim_galore.module = ['bioinfo-tools', 'FastQC/0.11.5', 'TrimGalore/0.4.1']
-  $star.module = ['bioinfo-tools', 'star/2.5.1b']
+  
+  $star {
+    module = ['bioinfo-tools', 'star/2.5.1b']
+    cpus = { 16 * task.attempt }
+    memory = { 250.GB * task.attempt }
+  }
+  
   $hisat2Align.module = ['bioinfo-tools', 'samtools/1.3', 'HISAT2/2.1.0']
   $hisat2_sortOutput.module = ['bioinfo-tools', 'samtools/1.3']
   $rseqc.module = ['bioinfo-tools', 'rseqc/2.6.1', 'samtools/1.3']
   $genebody_coverage.module = ['bioinfo-tools', 'rseqc/2.6.1', 'samtools/1.3']
   $preseq.module = ['bioinfo-tools', 'preseq/0.1.0']
-  $markDuplicates.module = ['bioinfo-tools', 'samtools/1.3', 'picard/2.10.3']
-  $dupradar.module = ['bioinfo-tools', 'R/3.2.3']
+
+  $markDuplicates {
+    module = ['bioinfo-tools', 'samtools/1.3', 'picard/2.10.3']
+    cpus = { 16 * task.attempt }
+    memory = { 120.GB * task.attempt }
+  }
+
+  $dupradar {
+    module = ['bioinfo-tools', 'R/3.2.3']
+    cpus = { 16 * task.attempt }
+    memory = { 200.GB * task.attempt }
+
+  }
+
   $featureCounts.module = ['bioinfo-tools', 'subread/1.5.1']
   $merge_featureCounts.module = ['python/2.7.11']
   $stringtieFPKM.module = ['bioinfo-tools', 'StringTie/1.3.3']
